fixed overflow property

--- a/src/assets/styles/components/Carousel.scss
+++ b/src/assets/styles/components/Carousel.scss
@@ -1,6 +1,6 @@
 .carousel {
   width: 100%;
-  overflow: scroll;
+  // overflow: scroll;
   padding: 30px;
   position: relative;
 }
